🛠 fixed favicon alignment

--- a/twake/frontend/src/app/views/applications/messages/message/parts/LinkPreview.scss
+++ b/twake/frontend/src/app/views/applications/messages/message/parts/LinkPreview.scss
@@ -14,7 +14,7 @@
       width: 16px;
       height: 16px;
       display: inline-block;
-      vertical-align: baseline;
+      vertical-align: text-top;
     }
 
     .ant-avatar {
